refactor: Request from Browser

--- a/css/components/_TitleInput.scss
+++ b/css/components/_TitleInput.scss
@@ -1,5 +1,6 @@
 .TitleInput {
   width: 100%;
+  margin: 0.1em 0;
 }
 
 .TitleInput {
@@ -7,6 +8,6 @@
     display: inline-block;
   }
   input {
-    margin: 0 auto 0 1em;
+    padding: 8px 52px 8px 10px;
   }
 }
