--- a/css/index.css
+++ b/css/index.css
@@ -14,4 +14,12 @@
 .TitleInput input {
   padding: 8px 52px 8px 10px; }
 
+.ServiceList .Service-icon {
+  width: 24px;
+  height: 24px; }
+.ServiceList .Service--disable .Service-icon {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  filter: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' height='0'><filter id='greyscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0' /></filter></svg>#greyscale"); }
+
 /*# sourceMappingURL=index.css.map */
