--- a/css/components/_TitleInput.scss
+++ b/css/components/_TitleInput.scss
@@ -8,6 +8,7 @@
     display: inline-block;
   }
   input {
-    padding: 8px 52px 8px 10px;
+    padding: 8px 0 8px 0.5em;
+    width: 100%;
   }
 }
