--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,8 @@
   margin: 0.1em 0; }
 
 .URLInput input {
-  padding: 8px 52px 8px 10px; }
+  padding: 8px 0 8px 0.5em;
+  width: 100%; }
 
 .TitleInput {
   width: 100%;
@@ -12,7 +13,8 @@
 .TitleInput input, .TitleInput label {
   display: inline-block; }
 .TitleInput input {
-  padding: 8px 52px 8px 10px; }
+  padding: 8px 0 8px 0.5em;
+  width: 100%; }
 
 .ServiceList .Service-icon {
   width: 24px;
@@ -21,5 +23,8 @@
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
   filter: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' height='0'><filter id='greyscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0' /></filter></svg>#greyscale"); }
+
+* {
+  box-sizing: border-box; }
 
 /*# sourceMappingURL=index.css.map */
