--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,13 @@
   padding: 8px 0 8px 0.5em;
   width: 100%; }
 
+.ServiceList ul {
+  list-style: none;
+  margin: 0;
+  padding: 0.5em; }
+.ServiceList li {
+  margin: 0.5em;
+  display: inline-block; }
 .ServiceList .Service-icon {
   width: 24px;
   height: 24px; }
@@ -23,6 +30,16 @@
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
   filter: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' height='0'><filter id='greyscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0' /></filter></svg>#greyscale"); }
+
+.Editor .ReactCodeMirror {
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
+  border-color: #d9d9d9 #cccccc #b3b3b3;
+  border-radius: 4px;
+  box-sizing: border-box;
+  color: #333333;
+  cursor: default;
+  outline: none; }
 
 * {
   box-sizing: border-box; }
