--- a/css/index.scss
+++ b/css/index.scss
@@ -2,6 +2,7 @@
 @import "./components/URLInput";
 @import "./components/TitleInput";
 @import "./components/ServiceList";
+@import "./components/Editor";
 
 * {
   box-sizing: border-box;
