chore(style): add style

--- a/css/components/_Editor.scss
+++ b/css/components/_Editor.scss
@@ -8,3 +8,11 @@
   cursor: default;
   outline: none;
 }
+
+.Editor .CodeMirror, .Editor .CodeMirror-scroll {
+  min-height: 5em;
+}
+
+.Editor .CodeMirror {
+  height: auto;
+}
