--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+.App {
+  padding: 0 10px; }
+
 .URLInput {
   width: 100%;
   margin: 0.1em 0; }
@@ -16,20 +19,22 @@
   padding: 8px 0 8px 0.5em;
   width: 100%; }
 
-.ServiceList ul {
-  list-style: none;
-  margin: 0;
-  padding: 0.5em; }
-.ServiceList li {
-  margin: 0.5em;
-  display: inline-block; }
-.ServiceList .Service-icon {
-  width: 24px;
-  height: 24px; }
-.ServiceList .Service--disable .Service-icon {
-  -webkit-filter: grayscale(100%);
-  filter: grayscale(100%);
-  filter: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' height='0'><filter id='greyscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0' /></filter></svg>#greyscale"); }
+.ServiceList {
+  height: 48px; }
+  .ServiceList ul {
+    list-style: none;
+    margin: 0;
+    padding: 1rem 0; }
+  .ServiceList li {
+    margin: 0 0.5em;
+    display: inline-block; }
+  .ServiceList .Service-icon {
+    max-width: 24px;
+    max-height: 24px; }
+  .ServiceList .Service--disable .Service-icon {
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    filter: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' height='0'><filter id='greyscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0' /></filter></svg>#greyscale"); }
 
 .Editor .ReactCodeMirror {
   background-color: #ffffff;
@@ -41,7 +46,45 @@
   cursor: default;
   outline: none; }
 
+.Editor .CodeMirror, .Editor .CodeMirror-scroll {
+  min-height: 5em; }
+
+.Editor .CodeMirror {
+  height: auto; }
+
+.RelatedListBox .RelatedList {
+  padding-left: 1em;
+  margin: 0.1em 0; }
+
+.RelatedItem .hidden {
+  display: none; }
+.RelatedItem .RelatedItem-edit {
+  width: 100%; }
+
+.RelatedListBox-Add {
+  margin-top: 0.5rem; }
+
+.SubmitButton {
+  text-align: center;
+  margin: 1rem 0; }
+  .SubmitButton button {
+    width: 50%;
+    padding: 10px;
+    font-size: 18px;
+    background-color: #27496d; }
+
 * {
   box-sizing: border-box; }
+
+.l-header {
+  margin: 0.5em 0 0.2em 0;
+  font-size: 18px; }
+
+.flat-button {
+  font-size: 14px;
+  color: #fff;
+  background-color: #6496c8;
+  text-shadow: -1px 1px #417cb8;
+  border: none; }
 
 /*# sourceMappingURL=index.css.map */
