feat(textlint): auto update tech-word-dictionary

--- a/css/components/_Editor.scss
+++ b/css/components/_Editor.scss
@@ -9,6 +9,10 @@
   outline: none;
 }
 
+.Editor .ReactCodeMirror {
+  margin: 0 -10px;
+}
+
 .Editor .CodeMirror, .Editor .CodeMirror-scroll {
   min-height: 5em;
 }
