feat(css): add font-family to Editor style

--- a/css/components/_Editor.scss
+++ b/css/components/_Editor.scss
@@ -19,4 +19,5 @@
 
 .Editor .CodeMirror {
   height: auto;
+  font-family: Monaco, 'Andale Mono', 'Lucida Console', 'Bitstream Vera Sans Mono', 'Courier New', Courier, monospace;
 }
