--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,9 @@
   padding: 8px 0 8px 0.5em;
   width: 100%; }
 
+.URLInput input:invalid {
+  border: 1px solid red; }
+
 .TitleInput {
   width: 100%;
   margin: 0.1em 0; }
