--- a/css/index.scss
+++ b/css/index.scss
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import "./components/App";
 @import "./components/URLInput";
+@import "./components/ViaURLInput";
 @import "./components/TitleInput";
 @import "./components/ServiceList";
 @import "./components/Editor";
