--- a/css/index.css
+++ b/css/index.css
@@ -1,140 +1,138 @@
 .App {
-  padding: 0 10px;
+    padding: 0 10px;
 }
 
 .URLInput {
-  width: 100%;
-  margin: 0.1em 0;
+    width: 100%;
+    margin: 0.1em 0;
 }
 
 .URLInput input {
-  padding: 8px 0 8px 0.5em;
-  width: 100%;
-  border: 1px solid #aaaaaa;
+    padding: 8px 0 8px 0.5em;
+    width: 100%;
+    border: 1px solid #aaaaaa;
 }
 
 .URLInput input:invalid {
-  border: 1px solid red;
+    border: 1px solid red;
 }
 
 .ViaURLInput {
-  width: 100%;
-  margin: 0.1em 0;
+    width: 100%;
+    margin: 0.1em 0;
 }
 
 .ViaURLInput input {
-  padding: 8px 0 8px 0.5em;
-  width: 100%;
-  border: 1px solid #aaaaaa;
+    padding: 8px 0 8px 0.5em;
+    width: 100%;
+    border: 1px solid #aaaaaa;
 }
 
 .ViaURLInput input:invalid {
-  border: 1px solid red;
+    border: 1px solid red;
 }
 
 .TitleInput {
-  width: 100%;
-  margin: 0.1em 0;
+    width: 100%;
+    margin: 0.1em 0;
 }
 
-.TitleInput input, .TitleInput label {
-  display: inline-block;
+.TitleInput input,
+.TitleInput label {
+    display: inline-block;
 }
 .TitleInput input {
-  padding: 8px 0 8px 0.5em;
-  width: 100%;
-  border: 1px solid #aaaaaa;
+    padding: 8px 0 8px 0.5em;
+    width: 100%;
+    border: 1px solid #aaaaaa;
 }
 
-.ServiceList {
-  -webkit-app-region: drag;
-  height: 48px;
-}
 .ServiceList ul {
-  list-style: none;
-  margin: 0;
-  padding: 1rem 0;
+    list-style: none;
+    margin: 0;
+    padding: 1rem 0;
 }
 .ServiceList li {
-  margin: 0 0.5em;
-  display: inline-block;
+    margin: 0 0.5em;
+    display: inline-block;
 }
 .ServiceList .Service-icon {
-  max-width: 24px;
-  max-height: 24px;
+    max-width: 24px;
+    max-height: 24px;
 }
 .ServiceList .Service--disable .Service-icon {
-  -webkit-filter: grayscale(100%);
-  filter: grayscale(100%);
-  filter: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' height='0'><filter id='greyscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0' /></filter></svg>#greyscale");
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    filter: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' height='0'><filter id='greyscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0' /></filter></svg>#greyscale");
 }
 
 .Editor .ReactCodeMirror {
-  background-color: #ffffff;
-  border: 1px solid #cccccc;
-  border-color: #d9d9d9 #cccccc #b3b3b3;
-  border-radius: 4px;
-  box-sizing: border-box;
-  color: #333333;
-  cursor: default;
-  outline: none;
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    border-color: #d9d9d9 #cccccc #b3b3b3;
+    border-radius: 4px;
+    box-sizing: border-box;
+    color: #333333;
+    cursor: default;
+    outline: none;
 }
 
 .Editor .ReactCodeMirror {
-  margin: 0 -10px;
+    margin: 0 -10px;
 }
 
-.Editor .CodeMirror, .Editor .CodeMirror-scroll {
-  min-height: 5em;
+.Editor .CodeMirror,
+.Editor .CodeMirror-scroll {
+    min-height: 5em;
 }
 
 .Editor .CodeMirror {
-  height: auto;
-  font-family: Monaco, "Andale Mono", "Lucida Console", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
+    height: auto;
+    font-family: Monaco, "Andale Mono", "Lucida Console", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
 }
 
 .RelatedListBox .RelatedList {
-  padding-left: 1em;
-  margin: 0.1em 0;
+    padding-left: 1em;
+    margin: 0.1em 0;
 }
 
 .RelatedItem .hidden {
-  display: none;
+    display: none;
 }
 .RelatedItem .RelatedItem-edit {
-  width: 100%;
+    width: 100%;
 }
 
 .RelatedListBox-Add {
-  margin-top: 0.5rem;
+    margin-top: 0.5rem;
 }
 
 .SubmitButton {
-  text-align: center;
-  margin: 1rem 0;
+    text-align: center;
+    margin: 1rem 0;
 }
 .SubmitButton button {
-  width: 50%;
-  padding: 10px;
-  font-size: 18px;
-  background-color: #27496d;
+    width: 50%;
+    padding: 10px;
+    font-size: 18px;
+    background-color: #27496d;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .l-header {
-  margin: 0.5em 0 0.2em 0;
-  font-size: 18px;
+    margin: 0.5em 0 0.2em 0;
+    font-size: 18px;
 }
 
 .flat-button {
-  font-size: 14px;
-  color: #fff;
-  background-color: #6496c8;
-  text-shadow: -1px 1px #417cb8;
-  border: none;
+    font-size: 14px;
+    color: #fff;
+    background-color: #6496c8;
+    text-shadow: -1px 1px #417cb8;
+    border: none;
 }
 
 /*# sourceMappingURL=index.css.map */
